Fix hint label position gap

--- a/content_scripts/wimpulation.css
+++ b/content_scripts/wimpulation.css
@@ -4,6 +4,7 @@
     background: none !important;
     width: 0px !important;
     height: 0px !important;
+    position: static !important;
 }
 #wimpulation-hint-container > span {
     opacity: 0.8;
